--- a/locales/nl.json
+++ b/locales/nl.json
@@ -3,7 +3,8 @@
   "form": {
     "botField": "Vul dit niet in als je mens bent",
     "email": "E-mailadres",
-    "name": "Naam",
+    "firstName": "Voornaam",
+    "lastName": "Achternaam",
     "error": {
       "email": {
         "email": "Vul een geldige e-mailadres in."
