--- a/locales/en.json
+++ b/locales/en.json
@@ -1,10 +1,10 @@
 {
-  "close": "Sluiten",
+  "close": "Close",
   "form": {
     "botField": "Vul dit niet in als je mens bent",
-    "email": "E-mailadres",
-    "firstName": "Voornaam",
-    "lastName": "Achternaam",
+    "email": "Email address",
+    "firstName": "First name",
+    "lastName": "Last name",
     "error": {
       "email": {
         "email": "Vul een geldige e-mailadres in."
@@ -19,15 +19,15 @@
     }
   },
   "home": "Home",
-  "latestPosts": "Laatste berichten",
+  "latestPosts": "Load more post",
   "loadMore": "Laad meer berichten",
-  "loading": "Aan het laden",
-  "mainNavigation": "Hoofdnavigatie",
+  "loading": "Loading",
+  "mainNavigation": "Main navigation",
   "menu": "Menu",
-  "readMore": "Lees verder",
+  "readMore": "Read more",
   "socialMediaLinks": "Social media links",
-  "viewOn": "Bekijk %{title} op %{network}",
-  "visitOn": "Bezoek %{title} op %{network}",
-  "title404": "Pagina niet gevonden",
-  "title500": "Er is een fout opgetreden"
+  "viewOn": "View %{title} op %{network}",
+  "visitOn": "Visist %{title} op %{network}",
+  "title404": "Page not found",
+  "title500": "An error occured"
 }
