--- a/locales/nl.json
+++ b/locales/nl.json
@@ -27,7 +27,7 @@
     "title": "Onderteken deze petitie",
     "btn": "Ik onderteken deze petitie",
     "error": "Er ging iets mis bij het versturen",
-    "success": "Het verzenden van het formulier is gelukt. Je ontvangt nu een e-mail om je e-mailadres te bevestigen."
+    "success": "Het verzenden van het formulier is gelukt."
   },
   "skipLinks": {
     "content": "Naar hoofdinhoud",
